--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "jquery": "^3.7.0",
     "leaflet": "^1.9.4",
     "popper.js": "^1.16.1",
+    "v-pagination-3": "^0.1.7",
     "vue": "^3.2.13",
-    "vue-pagination-2": "^3.1.0",
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
